<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="my_app_portfolio">My App Portfolio</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="super_duo">Super Duo</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
</resources>
